# restater

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/design/: design.md  flow_detail_v1.md
docs/modules/: runtime_check_flow.md
docs/roadmap/: implementation_roadmap_v1.md
docs/state/: phase1_implementation_status.md
docs/tools/: .env.example
docs/use/: howtouse.md
src/restater/: cli.py  config.py  llm.py
src/restater/graph/: __init__.py  builder.py  runner.py  state.py
src/restater/graph/nodes/: classify_requirement_sources.py  collect_context.py  curate_requirements.py  execute_inspection.py  extract_requirements.py  generate_report.py  helpers.py  inspect.py  judge_status.py  plan_inspection.py
src/restater/models/: __init__.py  schemas.py
src/restater/prompts/: extract_requirements.md  generate_report_summary.md  inspect_next.md  judge_status.md  plan_inspection.md
src/restater/services/: __init__.py  project_scanner.py  report_renderer.py
src/restater/tools/: __init__.py  filesystem.py  pdf.py  shell.py  validation.py
tests/: test_inspect_validation.py  test_report_renderer.py  test_requirement_flow.py
