[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restater"
version = "0.1.0"
description = "Local project status checking agent built with LangGraph."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "pydantic>=2.0",
  "pypdf>=4.0",
]

[project.scripts]
restater = "restater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

